gitops/lohko/base/v1/networking-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lohko-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: lohko-app
