gitops/lohko/base/v1/networking-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 40m
  name: lohko-ingress
spec:
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lohko-svc
                port:
                  number: 80
  tls:
    - hosts:
        - PLACEHOLDER
      secretName: lohko-certificate-1
